--- a/src/CreateTodoButton.css
+++ b/src/CreateTodoButton.css
@@ -5,12 +5,12 @@
   border-radius: 50%;
   cursor: pointer;
   font-size: 50px;
+  position: fixed;
   bottom: 24px;
   right: 24px;
   font-weight: bold;
   color: #FAFAFA;
   display: flex;
-  position: absolute;
   justify-content: center;
   align-items: center;
   height: 64px;
