--- a/src/TodoItem.css
+++ b/src/TodoItem.css
@@ -10,12 +10,11 @@
 
 .TodoItem-p {
   margin: 24px 0 24px 24px;
-  width: calc(100% - 120);
+  width: calc(100% - 120px);
   font-size: 18px;
   line-height: 24px;
   font-weight: 400;
 }
-
 .TodoItem-p--complete {
   text-decoration: line-through;
 }
@@ -29,13 +28,13 @@
   width: 48px;
   font-size: 24px;
   font-weight: bold;
+  /* background-color: #CCC; */
 }
 
 .Icon-check {
   position: absolute;
   left: 12px;
 }
-
 .Icon-check--active {
   color: #4caf50;
 }
@@ -45,7 +44,6 @@
   top: -24px;
   right: 0;
 }
-
 .Icon-delete:hover {
   color: red;
 }
